--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>chocolate-pizza</title>
-  <link rel="stylesheet" href="./CSS/reset.css" />
-  <link rel="stylesheet" href="./CSS/style.css" />
+  <link  rel="Style Sheet" href="./css/reset.css">
+  <link href="./css/style.css" type="text/css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
