--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <link rel="stylesheet" href="./CSS/reset.css">
   <link rel="stylesheet" href="./CSS/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
@@ -14,7 +17,7 @@
     <nav class="navBar">
       <a href="#" class="logo-img">
         <img class="logo" alt="logo-img" src="./Images/logo.png" />
-        <h2>Delicious<span class="logoText">THE BEST FOOD BLOG ON THE WEB.</span></h1>
+        <h2>Delicious<span class="logoText">THE BEST FOOD BLOG ON THE WEB.</span></h2>
       </a>
       <ul class="socialLogo">
         <li>
@@ -99,8 +102,8 @@
           </ul>
           <ul class="listright">
             <li>1 1/2 cups heavy cream</li>
-            <li class="checked"><span class="del"> 1/3 granulated sugar</span></li>
-            <li class="checked"><span class="del"> 2 egg yolks</span></li>
+            <li class="checked"><span class="check"> 1/3 granulated sugar</span></li>
+            <li class="checked"><span class="check"> 2 egg yolks</span></li>
             <li>1 lemon, juiced</li>
             <li>2 tbsp butter</li>
             <li>1 cup honey roasted pecans, roughly chopped</li>
@@ -114,7 +117,8 @@
         <img class="vanImg" src="./Images/van-pic.png" alt="Van Pic" />
         <div class="vanInf">
           <p class="vanName">Vanessa Stevenson</p>
-          <p class="vanHob">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p> 
+          <p class="vanHob">Food enthusiast, photography fan. Add a pinch of raw foodism and that's 
+            pretty much who I am.</p> 
         </div>
       </div>
       <button class="share">SHARE RECIEP </button> 
